--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos/CSS.css">
     <title>Creacion de pagina para GitHub Page en Entornos</title>
 </head>
+
 <body>
     <div id="pagina">
         <header>
@@ -27,11 +28,19 @@
                 <section>
                     <h1>Guía de creación y publicación de la página</h1>
                     <blockquote>
-                        <h4>Para la creación de nuestra página web tendremos que seguir una serie de pasos:</h4>
-                        <h4>Primero de todo tendremos que crearnos una cuenta en la pagina de <a href="http://github.com">GitHub</a>, tras crear nuestra cuenta tendremos que crear un nuevo repositorio, donde lo </h4>
+                        <h4>GitHub es una plataforma popular para alojar proyectos de software y colaborar con otros
+                            desarrolladores. Una de las características más útiles de GitHub es la capacidad de crear
+                            repositorios y agregar colaboradores para trabajar en el proyecto. Para la creación de
+                            nuestra página web tendremos que seguir una serie de pasos:</h4>
+                        <h4>Primero de todo, tendremos que crearnos una cuenta en la pagina de <a
+                                href="http://github.com">GitHub</a>, tras crear nuestra cuenta tendremos que crear un
+                            nuevo repositorio "Create repository" al cual le daremos el nombre que queramos.</h4>
                         <hr>
                         <br>
-                        <pre><h2>“LOREM LOREM LOREM”.</h2></pre>
+                        <h4>Tras crear el repositorio nos
+                            tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
+                            el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
+                            así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
                         <br>
                         – Louis
                         <br>
@@ -46,9 +55,9 @@
             <br>
             <div id="footer">
                 <br>
-                <h3>Francisco <span> Ortega  Velasco  y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
             </div>
         </footer>
 </body>
-</html>
 
+</html>
