--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
-    <title>Creacion de pagina para GitHub Page en Entornos</title>
+    <title>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                     <td><img id="img" src="images/GitHub-Mark.png"></td>
                     <td>
                         <p>
-                        <h1 id="titulo">Creacion de pagina para GitHub Page en Entornos</h1>
+                        <h1 id="titulo">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
                         </p>
                     </td>
                 </tr>
@@ -44,14 +44,9 @@
                         <br>
                         – Louis
                         <br>
-
-                        <form method="post">
-                           <a href="./pagina2.html"> <input type="button" value="Finalizar pedido"></a>
-                    </form>
                     </blockquote>
                     <br>
                     <br>
-                   
                 </section>
             </div>
         </main>
