--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <br>
 
                         <form method="post">
-                           <a href="./pagina2.html"> <input type="button" value="Finalizar pedido"></a>
+                           <a href="./pagina2.html"> <input type="button" value="pagina siguiente"></a>
                     </form>
                     </blockquote>
                     <br>
