subida paginas html

--- a/pagina3.html
+++ b/pagina3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
-    <title>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</title>
+    <title>OOOOOOOOOOOOOOOOOOOOOOOOOOO</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                     <td><img id="img" src="images/GitHub-Mark.png"></td>
                     <td>
                         <p>
-                        <h1 id="titulo">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+                        <h1 id="titulo">OOOOOOOOOOOOOOOOOOOOOOOOOOO</h1>
                         </p>
                     </td>
                 </tr>
@@ -43,8 +43,10 @@
                             así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
 
                         <form method="post">
-                            <a href="./index.html"> <input type="button" value="Página anterior"></a>
-                            <a href="./pagina3.html"> <input type="button" value="Página siguiente"></a>
+
+                            <a href="./pagina2.html"> <input type="button" value="Página anterior"></a>
+                            <a href="./index.html"> <input type="button" value="Página siguiente"></a>
+                            
                      </form>
                     </blockquote>
                     <br>
