Revert "nueva página html y cambios"
This reverts commit 7aa5592f35ce15a7e302a6676c77ea5ab44600d5.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <br>
 
                         <form method="post">
-                           <a href="./pagina2.html"> <input type="button" value="pagina siguiente"></a>
+                           <a href="./pagina2.html"> <input type="button" value="Finalizar pedido"></a>
                     </form>
                     </blockquote>
                     <br>
