nuevas imagenes y actu hmtl pa2

--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
-    <title>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</title>
+    <title>Colaboracion</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                     <td><img id="img" src="images/GitHub-Mark.png"></td>
                     <td>
                         <p>
-                        <h1 id="titulo">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+                        <h1 id="titulo">Colaboradores</h1>
                         </p>
                     </td>
                 </tr>
@@ -26,14 +26,24 @@
         <main>
             <div id="derecha">
                 <section>
-                    <h1>Guía de creación y publicación de la página</h1>
+                    <h1>Actualización de los colaboradores</h1>
                     <blockquote>
                         <h4>Tras crear el repositorio nos
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
-                            así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
+                            así sean colaboradores y tengan acceso a nuestro repositorio. Una vez tenemos los colaboradores establecidos,
+                            ya puede dar comienzo el trabajo en equipo, pudiendo todos los participantes del repositorio trabajar de forma simultanea,
+                            gracias a las herramientas de las que dispone GITHUB, como puede ser Github Desktop. Dichas herramientas ayudan a los participantes
+                            a subir todos los cambios o progresos en el código que han ido realizando, subiendo todo esto de forma instantanea a través de los "Commits". </h4>
                         <hr>
                         <br>
+
+                        <table>
+                            <tr>
+                                <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 231526.png"></td>
+                                <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 231607.png"> </td>
+                            </tr>
+                        </table>
                         
                         <form method="post">
                             <a href="./index.html"> <input type="button" value="Página anterior"></a>
