--- a/pagina3.html
+++ b/pagina3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
-    <title>OOOOOOOOOOOOOOOOOOOOOOOOOOO</title>
+    <title>Commits</title>
 </head>
 
 <body>
@@ -28,13 +28,6 @@
                 <section>
                     <h1>Guía de creación y publicación de la página</h1>
                     <blockquote>
-                        <h4>GitHub es una plataforma popular para alojar proyectos de software y colaborar con otros
-                            desarrolladores. Una de las características más útiles de GitHub es la capacidad de crear
-                            repositorios y agregar colaboradores para trabajar en el proyecto. Para la creación de
-                            nuestra página web tendremos que seguir una serie de pasos:</h4>
-                        <h4>Primero de todo, tendremos que crearnos una cuenta en la pagina de <a
-                                href="http://github.com">GitHub</a>, tras crear nuestra cuenta tendremos que crear un
-                            nuevo repositorio "Create repository" al cual le daremos el nombre que queramos.</h4>
                         <hr>
                         <br>
                         <h4>Tras crear el repositorio nos
