Desplazamiento de páginas

--- a/index.html
+++ b/index.html
@@ -44,26 +44,27 @@
                             </tr>
                         </table>
                         <br>
-                        – Louis
                         <br>
-                        <form method="post">
-                           <a href="./pagina2.html"> <input type="button" value="Finalizar pedido"></a>
-                    </form>
                     </blockquote>
+                    <div id="botones"></div>
+                    <form method="post">
+                            <a href="./pagina2.html" class="button button-secondary">Siguiente página</a>
+                </form>
+            </div>
                     <br>
                     <br>
-                   
                 </section>
+                <footer>
+                    <br>
+                    <br>
+                    <div id="footer">
+                        <br>
+                        <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                    </div>
+                </footer>
             </div>
         </main>
-        <footer>
-            <br>
-            <br>
-            <div id="footer">
-                <br>
-                <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
-            </div>
-        </footer>
+
 </body>
 
 </html>
