--- a/pagina2.html
+++ b/pagina2.html
@@ -41,25 +41,28 @@
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
                             así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
-
-                        <form method="post">
-                            <a href="./index.html"> <input type="button" value="Página anterior"></a>
-                            <a href="./pagina3.html"> <input type="button" value="Página siguiente"></a>
-                     </form>
+                            <div id="botones"></div>
+                            <form method="post">
+                                    <a href="./index.html" class="button button-primary">Página anterior</a>
+                                    <a href="./pagina3.html" class="button button-secondary">Siguiente página</a>
+                        </form>
+                    </div>
                     </blockquote>
                     <br>
                     <br>
                 </section>
+                <footer>
+                    <br>
+                    <br>
+                <div id="footer">
+                    <br>
+                    <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                </div>
+            </footer>
             </div>
         </main>
-        <footer>
-            <br>
-            <br>
-            <div id="footer">
-                <br>
-                <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
-            </div>
-        </footer>
+
+
 </body>
 
 </html>
