--- a/pagina3.html
+++ b/pagina3.html
@@ -42,26 +42,26 @@
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
                             así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
 
-                        <form method="post">
-
-                            <a href="./pagina2.html"> <input type="button" value="Página anterior"></a>
-                            <a href="./index.html"> <input type="button" value="Página siguiente"></a>
-                            
-                     </form>
+                            <div id="botones"></div>
+                            <form method="post">
+                                    <a href="./pagina2.html" class="button button-primary">Página anterior</a>
+                        </form>
+                    </div>
                     </blockquote>
                     <br>
                     <br>
                 </section>
+                <footer>
+                    <br>
+                    <br>
+                    <div id="footer">
+                        <br>
+                        <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                    </div>
+                </footer>
             </div>
         </main>
-        <footer>
-            <br>
-            <br>
-            <div id="footer">
-                <br>
-                <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
-            </div>
-        </footer>
+
 </body>
 
 </html>
