--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             nuevo repositorio "Create repository" al cual le daremos el nombre que queramos.</h4>
                         <hr>
                         <br>
-                        <table>
+                        <table id="tabla2">
                             <tr>
                                 <td> <img id="img1" src="images/Pag Inicio Git.png"></td>
                                 <td> <img id="img1" src="images/Pag para repositorio.png"> </td>
@@ -46,10 +46,11 @@
                         <br>
                         <br>
                     </blockquote>
-                    <div id="botones"></div>
+                    <div id="botones">
                     <form method="post">
                             <a href="./pagina2.html" class="button button-secondary">Siguiente página</a>
                 </form>
+            </div>
             </div>
                     <br>
                     <br>
