--- a/pagina3.html
+++ b/pagina3.html
@@ -17,7 +17,7 @@
                     <td><img id="img" src="images/GitHub-Mark.png"></td>
                     <td>
                         <p>
-                        <h1 id="titulo">Commits</h1>
+                        <h1 id="titulo">OOOOOOOOOOOOOOOOOOOOOOOOOOO</h1>
                         </p>
                     </td>
                 </tr>
@@ -26,26 +26,21 @@
         <main>
             <div id="derecha">
                 <section>
-                    <h1>¿Cómo hago un Commit?</h1>
+                    <h1>Guía de creación y publicación de la página</h1>
                     <blockquote>
+                        <hr>
+                        <br>
                         <h4>Tras crear el repositorio nos
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
                             así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
                             <br>
                             <br>
-                            <hr>
-                            <table>
-                                <tr>
-                                    <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 232754.png"></td>
-                                    <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 232829.png"> </td>
-                                    <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 233211.png"></td>
-                                </tr>
-                            </table>
-                            <div id="botones"></div>
+                            <div id="botones">
                             <form method="post">
                                     <a href="./pagina2.html" class="button button-primary">Página anterior</a>
                         </form>
+                    </div>
                     </div>
                     </blockquote>
                     <br>
