--- a/pagina2.html
+++ b/pagina2.html
@@ -31,7 +31,7 @@
                         <h4>Tras crear el repositorio nos
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
-                            así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
+                            así sean colaboradores y tengan acceso a nuestro repositorio.
                             así sean colaboradores y tengan acceso a nuestro repositorio. Una vez tenemos los colaboradores establecidos,
                             ya puede dar comienzo el trabajo en equipo, pudiendo todos los participantes del repositorio trabajar de forma simultanea,
                             gracias a las herramientas de las que dispone GITHUB, como puede ser Github Desktop. Dichas herramientas ayudan a los participantes
@@ -39,7 +39,7 @@
                         <hr>
                         <br>
 
-                        <table>
+                        <table id="tabla2">
                             <tr>
                                 <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 231526.png"></td>
                                 <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 231607.png"> </td>
@@ -47,11 +47,12 @@
                         </table>
                         <br>
                         <br>
-                        <div id="botones"></div>
+                        <div id="botones">
                         <form method="post">
                                 <a href="./index.html" class="button button-primary">Página anterior</a>
                                 <a href="./pagina3.html" class="button button-secondary">Siguiente página</a>
                     </form>
+                </div>
                 </div>
                     </blockquote>
                     <br>
