--- a/pagina2.html
+++ b/pagina2.html
@@ -31,7 +31,7 @@
                         <h4>Tras crear el repositorio nos
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
-                            así sean colaboradores y tengan acceso a nuestro repositorio.</h4>
+                            así sean colaboradores y tengan acceso a nuestro repositorio.
                             así sean colaboradores y tengan acceso a nuestro repositorio. Una vez tenemos los colaboradores establecidos,
                             ya puede dar comienzo el trabajo en equipo, pudiendo todos los participantes del repositorio trabajar de forma simultanea,
                             gracias a las herramientas de las que dispone GITHUB, como puede ser Github Desktop. Dichas herramientas ayudan a los participantes
