--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
+    <link rel="shortcut icon" href="images/GitHub-Mark.ico">
     <title>Creacion de pagina para GitHub Page en Entornos</title>
 </head>
 
@@ -47,24 +48,24 @@
                         <br>
                     </blockquote>
                     <div id="botones">
-                    <form method="post">
+                        <form method="post">
                             <a href="./pagina2.html" class="button button-secondary">Siguiente página</a>
-                </form>
-            </div>
-            </div>
-                    <br>
-                    <br>
-                </section>
-                <footer>
-                    <br>
-                    <br>
-                    <div id="footer">
-                        <br>
-                        <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                        </form>
                     </div>
-                </footer>
             </div>
-        </main>
+            <br>
+            <br>
+            </section>
+            <footer>
+                <br>
+                <br>
+                <div id="footer">
+                    <br>
+                    <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
+                </div>
+            </footer>
+    </div>
+    </main>
 
 </body>
 
