--- a/pagina2.html
+++ b/pagina2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/CSS.css">
+    <link rel="shortcut icon" href="images/GitHub-Mark.ico">
     <title>Colaboracion</title>
 </head>
 
@@ -32,13 +33,16 @@
                             tendremos que ir a los ajustes de este y en la pestaña "Collaborators" tendremos que añadir
                             el nombre del usuario que queremos añadir de colaborador en el campo de búsqueda, para que
                             así sean colaboradores y tengan acceso a nuestro repositorio.
-                            así sean colaboradores y tengan acceso a nuestro repositorio. Una vez tenemos los colaboradores establecidos,
-                            ya puede dar comienzo el trabajo en equipo, pudiendo todos los participantes del repositorio trabajar de forma simultanea,
-                            gracias a las herramientas de las que dispone GITHUB, como puede ser Github Desktop. Dichas herramientas ayudan a los participantes
-                            a subir todos los cambios o progresos en el código que han ido realizando, subiendo todo esto de forma instantanea a través de los "Commits". </h4>
+                            así sean colaboradores y tengan acceso a nuestro repositorio. Una vez tenemos los
+                            colaboradores establecidos,
+                            ya puede dar comienzo el trabajo en equipo, pudiendo todos los participantes del repositorio
+                            trabajar de forma simultanea,
+                            gracias a las herramientas de las que dispone GITHUB, como puede ser Github Desktop. Dichas
+                            herramientas ayudan a los participantes
+                            a subir todos los cambios o progresos en el código que han ido realizando, subiendo todo
+                            esto de forma instantanea a través de los "Commits". </h4>
                         <hr>
                         <br>
-
                         <table id="tabla2">
                             <tr>
                                 <td> <img id="img1" src="images/Captura de pantalla 2023-03-21 231526.png"></td>
@@ -48,26 +52,26 @@
                         <br>
                         <br>
                         <div id="botones">
-                        <form method="post">
+                            <form method="post">
                                 <a href="./index.html" class="button button-primary">Página anterior</a>
                                 <a href="./pagina3.html" class="button button-secondary">Siguiente página</a>
-                    </form>
-                </div>
-                </div>
-                    </blockquote>
-                    <br>
-                    <br>
-                </section>
-                <footer>
-                    <br>
-                    <br>
+                            </form>
+                        </div>
+            </div>
+            </blockquote>
+            <br>
+            <br>
+            </section>
+            <footer>
+                <br>
+                <br>
                 <div id="footer">
                     <br>
                     <h3>Francisco <span> Ortega Velasco y Alejandro Castillo </span> Jimenez ESPAÑA © 2023</h3>
                 </div>
             </footer>
-            </div>
-        </main>
+    </div>
+    </main>
 
 
 </body>
